<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/white_border"
            android:orientation="vertical" >

            <TextView
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/SpecialBonus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_border"
            android:orientation="vertical" >

            <TextView
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Pays" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_border"
            android:orientation="vertical" >

            <TextView
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Hits" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/white_border"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/handName1"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/handName1" />

            <TextView
                android:id="@+id/handName2"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/handName2" />

            <TextView
                android:id="@+id/handName3"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/handName3" />

            <TextView
                android:id="@+id/handName4"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/handName4" />

            <TextView
                android:id="@+id/handName5"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/handName5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_border"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/handBonus1"
                style="@style/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/handBonus1" />

            <TextView
                android:id="@+id/handBonus2"
                style="@style/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/handBonus2" />

            <TextView
                android:id="@+id/handBonus3"
                style="@style/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/handBonus3" />

            <TextView
                android:id="@+id/handBonus4"
                style="@style/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/handBonus4" />

            <TextView
                android:id="@+id/handBonus5"
                style="@style/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/handBonus5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/white_border"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/hitsFlag1"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Blank" />

            <TextView
                android:id="@+id/hitsFlag2"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Blank" />

            <TextView
                android:id="@+id/hitsFlag3"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Blank" />

            <TextView
                android:id="@+id/hitsFlag4"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Blank" />

            <TextView
                android:id="@+id/hitsFlag5"
                style="@style/blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Blank" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>