<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false" >

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/hand1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/card4"
            android:minHeight="96dp"
            android:minWidth="64dp"
            android:onClick="hand1_onClick"
            android:text="@string/hand1"
            android:textColor="#000000"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/hand2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/card4"
            android:minHeight="96dp"
            android:minWidth="64dp"
            android:onClick="hand2_onClick"
            android:text="@string/hand2"
            android:textColor="#000000"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/hand3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/card4"
            android:minHeight="96dp"
            android:minWidth="64dp"
            android:onClick="hand3_onClick"
            android:text="@string/hand3"
            android:textColor="#000000"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/hand4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/card4"
            android:minHeight="96dp"
            android:minWidth="64dp"
            android:onClick="hand4_onClick"
            android:text="@string/hand4"
            android:textColor="#000000"
            android:textSize="20sp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <Button
            android:id="@+id/hand5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:background="@drawable/card4"
            android:minHeight="96dp"
            android:minWidth="64dp"
            android:onClick="hand5_onClick"
            android:text="@string/hand5"
            android:textColor="#000000"
            android:textSize="20sp" />
    </FrameLayout>

</LinearLayout>