<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <include
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        layout="@layout/counter_pannel" />

    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="#000000" >

        <Button
            android:id="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/card4"
            android:minHeight="96dp"
            android:minWidth="64dp"
            android:textColor="#000000"
            android:textSize="20sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="@style/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Wager"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#00FFFF"
                android:textStyle="bold" />

            <TextView
                style="@style/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Win"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFF00"
                android:textStyle="bold" />

            <TextView
                style="@style/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Paid"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFF00"
                android:textStyle="bold" />

            <TextView
                style="@style/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Credit"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#00FFFF"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/wager"
                style="@style/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/win"
                style="@style/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/paid"
                style="@style/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/credit"
                style="@style/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>